Include new endpoints for mangas and new search endpoint
